--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+.emoji-picker em-emoji-picker{
+  ---rgb-acent: 34, 197, 94;
+  ---shadow: 0px 0px 0px 0px white;
+  height: 400px;
+}
